[package]
authors = ["Holger Rapp <HolgerRapp@gmx.net>"]
edition = "2018"
name = "giti"
version = "0.8.1"

[dependencies]
default-editor = "0.1.0"
futures = "0.3.5"
getopts = "0.2.19"
git2 = "0.7.0"
hubcaps = "0.6.0"
regex = "1.1.6"
self_update = "0.35.0"
serde_json = "1.0.39"
tempfile = "3.0.7"
term = "0.5.1"
# TODO(hrapp): Get tokio to 1.0.
tokio = { version = "0.2", features = ["full"] }
url = "1.7.1"
webbrowser = "0.3.1"
chrono = "0.4.7"
reqwest = { version = "0.10", features = ["json"] }

[dependencies.serde]
features = ["derive"]
version = "1.0.91"
