[package]
authors = ["Holger Rapp <HolgerRapp@gmx.net>"]
edition = "2018"
name = "giti"
version = "0.8.1"

[dependencies]
chrono = "0.4"
default-editor = "0.1.0"
futures = "0.3.30"
getopts = "0.2"
git2 = "0.19"
# TODO(hrapp): Replace with octorust, this is quite outdated
hubcaps-ex = "0.6.2"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
self_update = "0.41.0"
serde_json = "1"
serde = { version = "1", features = [ "derive" ] }
tempfile = "3"
term = "0.7"
tokio = { version = "1", features = ["full"] }
url = "2"
webbrowser = "1"
